# fluent-typed

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
playground/example1/: .gitignore  Cargo.toml  build.rs
playground/example1/locales/en/: base.ftl  login.ftl
playground/example1/locales/fr/: base.ftl  login.ftl
playground/example1/src/: lib.rs  multi_l10n.rs  single_gzip_l10n.rs  single_l10n.rs
src/: error.rs  l10n.rs  l10n_bundle.rs  l10n_language.rs  l10n_language_vec.rs  language_bundle.rs  language_collection.rs  lib.rs  loader.rs  validations.rs
src/tests/: complex.rs  mod.rs
src/tests/ast/: attrib_only.rs  mod.rs  msg_number.rs  msg_select.rs  msg_select_num.rs  msg_string.rs  msg_text.rs  msg_with_attrib.rs  msg_with_var.rs  res_msg_text.rs
src/tests/test_locales/de/: settings.ftl
src/tests/test_locales/en-gb/: settings.ftl
src/tests/test_locales_missing_msg/de/: company.ftl  profile.ftl
src/tests/test_locales_missing_msg/en-gb/: company.ftl  profile.ftl
src/tests/test_locales_multi_resources/de/: hello.ftl  settings.ftl
src/tests/test_locales_multi_resources/en-gb/: hello.ftl  settings.ftl
src/typed/: ext.rs  mod.rs  parse_ast.rs  type_in_comment.rs
tests/: common.rs  playground.rs
