[package]
name = "fluent-typed"
version = "0.1.0"
edition = "2021"
description = "Type-safe access to Fluent localization messages"
keywords = ["fluent", "internationalization", "localization"]
categories = [
    "internationalization",
    "localization",
    "development-tools::build-utils",
]
license-file = "LICENSE"
repository = "https://github.com/human-solutions/fluent-typed"

[lib]
doctest = false

[features]
build = []
langneg = ["dep:fluent-langneg", "dep:icu_locid"]

[dependencies]
fluent-syntax = "0.11"
fluent-bundle = "0.15"
fluent-langneg = { version = "0.14.1", optional = true }
unic-langid = "0.9"
icu_locid = { version = "1.5", optional = true }

[dev-dependencies]
insta = "1.40"
unic-langid = { version = "0.9", features = ["macros"] }
