[workspace]

[package]
name = "example1"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent-typed = { path = "../.." }
flate2 = { version = "1.0" }
unic-langid = { version = "0.9", features = ["macros"] }

[build-dependencies]
fluent-typed = { path = "../..", features = ["build"] }
flate2 = { version = "1.0" }
